# FastCVApp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirementsMAC_M1.txt  requirementsWIN.txt  save this poetry lock.txt
FastCVApp/: FCVAutils NEWER.py  FCVAutils.py  FastCVApp.py
FastCVApp/examples/: MAC_Backsub.spec  MAC_CannyEdge.spec  MAC_Mediapipe.spec  MAC_NofileTest.spec  WINMediapipeExample.spec  WIN_Backsub.spec  WIN_CannyEdge.spec  WIN_Mediapipe.spec  WIN_NofileTest.spec  WIN_SepiaFilter.spec  example_backgroundsubtraction.py  example_cannyedge.py  example_haarcascade.py  example_identityfunc.py  example_mediapipe.py  example_nofile.py  example_nofiletest.py  example_rgb2rgba.py  example_sepiafilter.py  idfunctest.py
fastcvapp/: fastcvapp.py  fcvautils.py
fastcvapp/examples/: MAC_Backsub.spec  MAC_CannyEdge.spec  MAC_HaarCascade.spec  MAC_Mediapipe.spec  MAC_NofileTest.spec  MAC_Sepiafilter.spec  WIN_Backsub.spec  WIN_BacksubFOLDER.spec  WIN_CannyEdge.spec  WIN_HaarCascade.spec  WIN_Mediapipe.spec  WIN_NofileTest.spec  WIN_SepiaFilter.spec  example_backgroundsubtraction.py  example_cannyedge.py  example_haarcascade.py  example_identityfunc.py  example_mediapipe.py  example_mediapipe2.py  example_nofiletest.py  example_rgb2rgba.py  example_sepiafilter.py  requirementsMAC_M1.txt
fcvadocs/: mkdocs.yml
fcvadocs/docs/: FirstExample.md  about.md  codebreakdown.md  index.md
test/: FastCVApp_multiprocessingqueueSLOW.py  RVTEST.kv  RVTEST.py  RVTEST2.py  TEST_kivy_from_subprocess.py  TEST_kivy_from_subprocess2.py  TEST_kivy_from_subprocess3.py  TEST_mediapipe_kivy_is_subprocess.py  TEST_mediapipe_kivy_multiprocessing.py  TEST_mediapipe_kivy_multiprocessing_2.py  TEST_mediapipe_kivy_nomultiprocessing.py  TEST_mediapipe_kivy_trio_multiprocessing.py  TEST_mediapipe_kivy_trio_multiprocessing_2.py  TEST_mediapipe_no_kivy_multiprocessing.py  TIMING NOTES Jun 4 23.txt  anotherbacksubexample.py  apr 6 2023 sharedmemwritespeedtest.py  background subtraction.py  backsub as subprocess test.py  backsub multiprocessing.py  bezierexample.py  bytetonumpyarray.py  camera.py  can'tevenshow.py  cannotpicklemoduleobject.py  canny edge.py  cv2_mediapipe_example.py  decorator_mp_testing.py  decorator_test.py  decorator_testing.py  decoratortesting.py  dill_pickling_check.py  evaldanger.py  fpsticker.py  freshest_frame.py  functesting.py  giltesting.py  haar_cascade_face_detection.py  haarcascade2.py  haarcascades_works.py  (+41 more)
tmpname/examples/: Readme.txt  (+6 more)
(+85 files in other folders)
